--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Admin Layout</title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag 'main' %>
+  <%= stylesheet_link_tag 'admin' %>
   <%= stylesheet_link_tag 'posts' %>
 </head>
 <body>
