--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Application Layout</title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag 'main' %>
+  <%= stylesheet_link_tag 'application' %>
 </head>
 <body>
 
